--- a/package.json
+++ b/package.json
@@ -13,5 +13,17 @@
     "@babel/core": "^7.17.7",
     "@babel/node": "^7.16.8",
     "@babel/preset-env": "^7.16.11"
-  }
+  },
+  "dependencies": {
+    "body-parser": "^1.19.2",
+    "express": "^4.17.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/TairineEllen/api-loja-virtual.git"
+  },
+  "bugs": {
+    "url": "https://github.com/TairineEllen/api-loja-virtual/issues"
+  },
+  "homepage": "https://github.com/TairineEllen/api-loja-virtual#readme"
 }
