--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "babel src --out-dir dist",
+    "start": "npm run build && node dist/server.js",
+    "dev": "babel-node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Tairine Ellen",
