--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "npm run build && node dist/server.js",
     "dev": "babel-node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "test:integration": "NODE_ENV=test mocha --opts test/integration/mocha.opts test/integration/**/*_spec.js"
+    "test:integration": "NODE_ENV=test mocha --opts test/integration/mocha.opts test/integration/**/*_spec.js",
+    "test:unit": "NODE_ENV=test mocha --opts test/unit/mocha.opts test/unit/**/*_spec.js"
   },
   "author": "Tairine Ellen",
   "license": "ISC",
